# accurate

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: release.yml  test.yml
accurate/: all.html  index.html  sidebar-items.js
accurate/dot/: index.html  sidebar-items.js  struct.Dot2.html  struct.DotConsumer.html  struct.DotFolder.html  struct.DotK.html  struct.NaiveDot.html  struct.OnlineExactDot.html  type.Dot3.html  type.Dot4.html  type.Dot5.html  type.Dot6.html  type.Dot7.html  type.Dot8.html  type.Dot9.html
accurate/sum/: fn.i_fast_sum_in_place.html  index.html  sidebar-items.js  struct.NaiveSum.html  struct.OnlineExactSum.html  struct.Sum2.html  struct.SumConsumer.html  struct.SumFolder.html  struct.SumK.html  type.Sum3.html  type.Sum4.html  type.Sum5.html  type.Sum6.html  type.Sum7.html  type.Sum8.html  type.Sum9.html
accurate/traits/: index.html  sidebar-items.js  trait.DotAccumulator.html  trait.DotWithAccumulator.html  trait.FloatFormat.html  trait.HalfUlp.html  trait.IFastSum.html  trait.ParallelDotAccumulator.html  (+10 more)
benches/: all.rs  criterion.rs
ci/: deploy-crate.sh  deploy-docs.sh  deploy_key.enc
crossbeam_channel/: all.html  enum.RecvTimeoutError.html  enum.SendTimeoutError.html  enum.TryRecvError.html  enum.TrySendError.html  fn.after.html  fn.bounded.html  fn.never.html  fn.tick.html  fn.unbounded.html  index.html  macro.select.html  struct.IntoIter.html  struct.Iter.html  struct.ReadyTimeoutError.html  struct.Receiver.html  struct.RecvError.html  struct.Select.html  struct.SelectTimeoutError.html  struct.SelectedOperation.html  struct.SendError.html  struct.Sender.html  struct.TryIter.html  struct.TryReadyError.html  struct.TrySelectError.html
crossbeam_deque/: all.html  enum.Steal.html  index.html  struct.Injector.html  struct.Stealer.html  struct.Worker.html
crossbeam_epoch/: all.html  fn.default_collector.html  fn.is_pinned.html  fn.pin.html  fn.unprotected.html  index.html  struct.Atomic.html  struct.Collector.html  struct.CompareAndSetError.html  struct.Guard.html  struct.LocalHandle.html  struct.Owned.html  struct.Shared.html  trait.CompareAndSetOrdering.html  trait.Pointer.html
examples/: generate.jl  plot.jl  testsuite.rs
rayon/: all.html  index.html  struct.FnContext.html  struct.Scope.html  struct.ScopeFifo.html  struct.ThreadBuilder.html  struct.ThreadPool.html  struct.ThreadPoolBuildError.html  struct.ThreadPoolBuilder.html
rayon_core/: all.html  index.html  struct.Configuration.html  struct.FnContext.html  struct.Scope.html  struct.ScopeFifo.html  struct.ThreadBuilder.html  struct.ThreadPool.html  struct.ThreadPoolBuildError.html  struct.ThreadPoolBuilder.html
src/: dot.rs  lib.rs  sum.rs  util.rs
tests/: all.rs  readme.rs
(+363 files in other folders)
