[package]
name = "accurate"
version = "0.3.0"
authors = ["Benedikt Steinbusch <ben@rockshrub.de>"]
description = "(more or less) accurate floating point algorithms"
homepage = "https://github.com/bsteinb/accurate"
repository = "https://github.com/bsteinb/accurate"
documentation = "http://bsteinb.github.io/accurate/"
readme = "README.md"
keywords = [ "floating-point", "accurate" ]
license = "MIT OR Apache-2.0"
build = "build.rs"

[features]
default = [ "parallel" ]
fma = []
parallel = [ "rayon" ]
clippy = []
lint = [ "clippy" ]

[dependencies]
cfg-if = "0.1"
num-traits = "0.2"
ieee754 = "0.2"
rayon = { version = "1", optional = true }

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
criterion = "0.2"
criterion-plot = "0.3"
num = "0.2"
rand = "0.6"
rug = "1.0"
skeptic = "0.13"

[[bench]]
name = "criterion"
harness = false
